--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,19 @@
 // main variables
+// color
+$algonquin-green: #006341;
+$newgrowth-green: #43b02a;
+$darkAlgonquin-green: #003328;
+$charcoal: rgba(0, 0, 0, 0.9);
+$white: #ffffff;
+//algonquin green tint
+$ag-tint80: #338267;
+$ag-tint60: #66a18d;
+$ag-tint35: #a6c8bc;
+$ag-tint10: #e5efec;
+// tint
+$ch-tint50: #909390;
+$ch-tint10: #e9e9e9;
+$ch-tint2: #f8f9f8;
 $nav-height-mobile: 62px;
 $nav-height-desktop: 82px;
 // section height
