--- a/css/main.css
+++ b/css/main.css
@@ -131,12 +131,37 @@ table {
 
 .contact .visual {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  height: calc(100% - 62px); }
   .contact .visual .change {
     height: 20%;
     background-color: black; }
   .contact .visual .con-cont {
-    height: 80%; }
+    height: 80%;
+    display: flex;
+    flex-direction: column; }
+    .contact .visual .con-cont h2 {
+      height: 15%;
+      display: flex;
+      align-items: center;
+      margin-left: 5%; }
+    .contact .visual .con-cont form {
+      height: 85%;
+      display: flex;
+      flex-direction: column; }
+      .contact .visual .con-cont form .section {
+        margin-left: 5%; }
+        .contact .visual .con-cont form .section:first-child {
+          display: flex;
+          justify-content: space-evenly; }
+
+@media (min-width: 1200px) {
+  .visual {
+    flex-direction: row; }
+    .visual .change,
+    .visual .con-cont {
+      width: 50%;
+      height: 100%; } }
 
 .contain {
   margin: 0 auto;
