--- a/css/main.css
+++ b/css/main.css
@@ -126,43 +126,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-.carousel {
-  width: 100%; }
-
-.contact .visual {
-  display: flex;
-  flex-direction: column;
-  height: calc(100% - 62px); }
-  .contact .visual .change {
-    height: 20%;
-    background-color: black; }
-  .contact .visual .con-cont {
-    height: 80%;
-    display: flex;
-    flex-direction: column; }
-    .contact .visual .con-cont h2 {
-      height: 15%;
-      display: flex;
-      align-items: center;
-      margin-left: 5%; }
-    .contact .visual .con-cont form {
-      height: 85%;
-      display: flex;
-      flex-direction: column; }
-      .contact .visual .con-cont form .section {
-        margin-left: 5%; }
-        .contact .visual .con-cont form .section:first-child {
-          display: flex;
-          justify-content: space-evenly; }
-
-@media (min-width: 1200px) {
-  .visual {
-    flex-direction: row; }
-    .visual .change,
-    .visual .con-cont {
-      width: 50%;
-      height: 100%; } }
-
 .contain {
   margin: 0 auto;
   width: 90%;
@@ -195,3 +158,110 @@ table {
     background-color: green; }
   .contain {
     height: 45vw; } }
+
+.carousel {
+  width: 100%; }
+
+.footer {
+  width: 100%;
+  height: 300px;
+  margin-top: 100px;
+  background-color: #000000; }
+
+.contact .visual {
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 62px); }
+  .contact .visual .change {
+    height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly; }
+    .contact .visual .change .btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+      margin: 0;
+      border: 0;
+      border-radius: 0;
+      flex-grow: 1;
+      height: 100%;
+      background-color: #000000; }
+      .contact .visual .change .btn .icon {
+        padding: 0;
+        margin: 0;
+        border: 0;
+        border-radius: 0;
+        width: 50px;
+        height: 50px;
+        background-color: #ffffff; }
+  .contact .visual .con-cont {
+    height: 90%;
+    display: flex;
+    flex-direction: column; }
+    .contact .visual .con-cont h2 {
+      height: 15%;
+      display: flex;
+      align-items: center;
+      margin-left: 5%; }
+    .contact .visual .con-cont form {
+      height: 85%;
+      display: flex;
+      flex-direction: column; }
+      .contact .visual .con-cont form .section {
+        width: 90%;
+        margin: 0 auto; }
+      .contact .visual .con-cont form .select {
+        height: 30%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly; }
+        .contact .visual .con-cont form .select .sub-sec {
+          height: 100%;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: center; }
+      .contact .visual .con-cont form .input {
+        height: 50%;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center; }
+        .contact .visual .con-cont form .input .sub-sec {
+          width: 100%;
+          height: 20%;
+          display: flex;
+          align-items: center;
+          justify-content: space-evenly; }
+          .contact .visual .con-cont form .input .sub-sec:last-child {
+            height: 40%; }
+          .contact .visual .con-cont form .input .sub-sec .title {
+            justify-self: start;
+            width: 40%;
+            display: flex;
+            justify-content: center;
+            align-items: center; }
+          .contact .visual .con-cont form .input .sub-sec input,
+          .contact .visual .con-cont form .input .sub-sec textarea {
+            justify-self: end;
+            width: 50%;
+            margin-right: 10%; }
+      .contact .visual .con-cont form .submit {
+        height: 20%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+
+@media all and (min-width: 992px) {
+  .contact .visual {
+    background-color: yellow;
+    display: flex;
+    flex-direction: row; }
+    .contact .visual .change,
+    .contact .visual .con-cont {
+      flex-grow: 1;
+      height: 100%; } }
