--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -40,10 +40,17 @@
       }
     }
     .con-cont {
+      * {
+        font-size: 1.2rem;
+        font-family: Arial;
+        color: $darkAlgonquin-green;
+      }
       height: 90%;
+      background-color: $newgrowth-green;
       display: flex;
       flex-direction: column;
       h2 {
+        font-size: 2rem;
         height: 15%;
         display: flex;
         align-items: center;
@@ -70,6 +77,9 @@
             flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
+            select {
+              border: $contact-border;
+            }
           }
         }
         // input
@@ -101,6 +111,7 @@
               justify-self: end;
               width: 50%;
               margin-right: 10%;
+              border: $contact-border;
             }
           }
         }
@@ -113,11 +124,19 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          input {
+            color: $white;
+            border: $contact-border;
+            background-color: $darkAlgonquin-green;
+            width: 100px;
+            height: 40px;
+          }
         }
       }
     }
   }
 }
+// effect
 
 @media all and (min-width: 992px) {
   .contact {
