--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,31 @@
 // scss works good
 // mobile view
 
-
-
+.logo{
+    
+   
+    img{
+       height:20px;
+    }
+}
+.media{
+    
+    img{
+        height: 20px;
+        float: right;
+    }
+}
 .navbar {
     
     background-color:#2A2A2A !important;
     height: 82px;
   ul li a {
     color: white !important;
+    
+     }
+
     }
-  
+ 
 .navbar-toggler{
     display: flex;
     align-items: center;
@@ -20,10 +35,15 @@
         align-items: center;
         justify-content: center;
         display: flex;
- 
 
     }
-}}
+}
+// .nav-link{
+//     img{
+//         width: 20px;
+//     }
+    
+}
     
 h2{
   font-family: arial;
@@ -108,4 +128,8 @@ h2{
 h2{
     justify-content: left;
 }
+.carousel-inner{
+    width: 50%;
+}
+
 }
