--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -1,9 +1,21 @@
 // don't forget to leave comments while coding
 // and have fun!
-.product{
-  .visual{
-    h2{
-      color:red;
-    }
-  }
+.product {
+h2 {
+  color: red;
 }
+}
+img{
+  max-width:100%;
+}
+
+// .cards {
+//   width: 100px;
+//   height: 100px;
+//   background-color: blue;
+// }
+// .img {
+//   height: 100%;
+//   width: 100%;
+//   background-image: url("/img/logo.jpg")
+// }
