--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,19 @@
 .carousel {
   width: 100%; }
 
-.product h2 {
-  color: red; }
+.card-title {
+  color: white;
+  text-align: center; }
 
-img {
-  max-width: 100%; }
+.card-body {
+  background-color: #006341; }
+
+.card-text {
+  color: white; }
+
+.cards .btn {
+  display: flex;
+  justify-items: center; }
 
 .contain {
   margin: 0 auto;
