--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,16 @@
       display: flex; }
   .navbar .collapse .navbar-nav .nav-item .nav-link {
     color: white; }
+  .navbar .bag {
+    width: 56px;
+    height: 40px; }
+    .navbar .bag a {
+      width: 100%;
+      height: 100%;
+      cursor: pointer; }
+      .navbar .bag a img {
+        width: 56px;
+        height: 40px; }
 
 .contain {
   margin: 0 auto;
