update home html

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -49,6 +49,18 @@
   }
 }
   
+// page1 content
+// .page1{
+//   .smooth{
+//   }
+//   .logo{
+//     img{
+//     }
+//   }
+//   .media{
+//   }
+// }
+
 // h2{
 // font-family: arial;
 // font-size: 28px;
