--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -5,91 +5,93 @@
   width: 100%;
 }
 
-.navbar{
-  background-color:$charcoal;
+.navbar {
+  background-color: $charcoal;
   // height: 82px;
-  .navbar-brand{
+  // .navbar-brand {
 
-  }
-  .navbar-toggler{
+  // }
+  .navbar-toggler {
     display: flex;
     align-items: center;
     margin: 0 auto;
-      .navbar-toggler-icon{
+    .navbar-toggler-icon {
       background-color: none;
       align-items: center;
       justify-content: center;
       display: flex;
-
+    }
   }
-  }
-  .collapse{
-    .navbar-nav{
-      .nav-item{
-        .nav-link{
-        color: white;
+  .collapse {
+    .navbar-nav {
+      .nav-item {
+        .nav-link {
+          color: white;
         }
       }
     }
   }
-  .bag{
-    width:56px;
-    height:40px;
+  .bag {
+    width: 56px;
+    height: 40px;
     // border:1px solid white;
     // background-color: #fff;
-    a{
-      width:100%;
-      height:100%;
-      cursor:pointer;
-      img{
-       width:56px;
-       height:40px;
+    a {
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      img {
+        width: 56px;
+        height: 40px;
       }
     }
   }
 }
-  
+
 // page1 content
-// .page1{
-//   .smooth{
-//   }
-//   .logo{
-//     img{
-//     }
-//   }
-//   .media{
-//   }
-// }
-
-// h2{
-// font-family: arial;
-// font-size: 28px;
-// color: #00643C;
-// margin-top: 70px;
-// margin-bottom: 40px;
-// display: flex;
-// justify-content: center;
-
-// }
-// .about{
-//   background-color: #00643C;
-//   color: white;
-//   height: 300px;
-//   p{
-//      padding-top:50px;
-//      padding-left: 30px;
-//      padding-right: 30px;
-//      justify-content: center;
-//   }
-// }
-// // #carouselExampleControls{
-// //     max-height: 700px;
-// //     overflow: hidden;
-// //     .img d block w-100{
-// //         width: auto;
-// //         height: 700px;;
-// //     }
-// // }
+.page1 {
+  .smooth {
+  }
+  .logo {
+    img {
+    }
+  }
+  .media {
+  }
+}
+// home
+.home {
+  .visual {
+    h2 {
+      font-family: arial;
+      font-size: 28px;
+      color: #00643c;
+      margin-top: 70px;
+      margin-bottom: 40px;
+      display: flex;
+      justify-content: center;
+    }
+    .carousel {
+      max-height: 700px;
+      overflow: hidden;
+      .img d block w-100 {
+        width: auto;
+        height: 700px;
+      }
+    }
+    .about {
+      background-color: #00643c;
+      color: white;
+      height: 300px;
+      p {
+        padding-top: 50px;
+        padding-left: 30px;
+        padding-right: 30px;
+        justify-content: center;
+      }
+    }
+  }
+}
 
 // // DESKTOP VIEW
 
@@ -100,18 +102,18 @@
 //       margin-right: 200px;
 //   }
 // // .logos{
-// //     height: 80px;    
+// //     height: 80px;
 // //     width: 100%;
 // // }
 // .logo{
-  
+
 //   margin-top: 15px;
 //   img{
 //      height:50px;
 //   }
 // }
 // .media{
-  
+
 //   img{
 //       height: 50px;
 //       float: right;
@@ -134,11 +136,11 @@
 //       padding-right: 150px;
 //       img{ width: 25px;
 //           display: flex;
-//           align-content: center; 
+//           align-content: center;
 //           justify-content: center;
-         
+
 //       }
- 
+
 // }
 // }
 // h2{
