--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,7 +23,8 @@ $section-height-tablg: 80vw;
 $section-height-desksm: 70vw;
 $section-height-desklg: 45vw;
 // home variables
-
+$caption-height:100px;
+$caption-width:100%;
 // product variables
 
 // service variables
