--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,7 +40,7 @@
 
 @media all and (min-width: 992px) {
   body {
-    background-color: blue;
+    background-color: white;
   }
   .contain {
     height: $section-height-desksm;
