adjusting media queries

--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,25 @@ button.btn.btn-link.collapsed {
 .pro-desk {
   display: none; }
 
+.test-area {
+  display: block; }
+
+.mobile-test, .desktop-test {
+  width: 100%;
+  height: 100px; }
+
+.mobile-test {
+  background-color: red; }
+
+.desktop-test {
+  background-color: green;
+  display: none; }
+
 @media all and (min-width: 992px) {
+  .mobile-test {
+    display: none; }
+  .desktop-test {
+    display: block; }
   .pro-desk {
     display: block; } }
 
