--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -69,7 +69,7 @@
           height: 30%;
           display: flex;
           align-items: center;
-          justify-content: space-evenly;
+          justify-content: center;
           .sub-sec {
             height: 100%;
             width: 100%;
@@ -79,6 +79,7 @@
             align-items: center;
             select {
               border: $contact-border;
+              width: 66%;
             }
           }
         }
@@ -101,7 +102,7 @@
             }
             .title {
               justify-self: start;
-              width: 40%;
+              width: 30%;
               display: flex;
               justify-content: center;
               align-items: center;
@@ -109,8 +110,7 @@
             input,
             textarea {
               justify-self: end;
-              width: 50%;
-              margin-right: 10%;
+              width: 30%;
               border: $contact-border;
             }
           }
