--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -1,6 +1,6 @@
 // don't forget to leave comments while coding
 // and have fun!
-.card-title { 
+.card-title {
   color: white;
   text-align: center;
 }
@@ -16,11 +16,12 @@
 .card-text {
   color: white;
 }
-.cards{
-  .btn{
+
+.cards {
+  .btn {
     display: flex;
     justify-items: center;
-    
+
   }
 
   .card {
@@ -28,11 +29,12 @@
   }
 
 }
+
 .btn-primary {
   color: $white;
   background-color: $algonquin-green;
   border-color: $algonquin-green;
- justify-content: center;
+  justify-content: center;
 }
 
 .btn-primary:hover {
@@ -50,45 +52,54 @@ button.btn.btn-link.collapsed {
   background-color: $charcoal;
 }
 
-.mb-0, .my-0 {
-  margin-bottom: 0!important;
+.mb-0,
+.my-0 {
+  margin-bottom: 0 !important;
   text-align: center;
 }
 
 // control of visibility
-.pro-desk{
-  display:none;
+.pro-desk {
+  display: none;
 }
 
 // test
-.test-area{
-  display:block;
+.test-area {
+  display: block;
 }
-.mobile-test, .desktop-test{
-  width:100%;
-  height:100px;
+
+.mobile-test,
+.desktop-test {
+  width: 100%;
+  height: 100px;
 }
-.mobile-test{
-  background-color:red;
+
+.mobile-test {
+  background-color: red;
 }
-.desktop-test{
-  background-color:green;
-  display:none;
+
+.desktop-test {
+  background-color: green;
+  display: none;
 }
+
 @media all and (min-width: 992px) {
+
   // blue breakpoint
   // test
-.mobile-test{
-  display:none;
-}
-.desktop-test{
-display:block;
-}
+  .mobile-test {
+    display: none;
+  }
+
+  .desktop-test {
+    display: block;
+  }
+
   // .pro-mob{
   //   display:none;
   // }
-  .pro-desk{
-    display:block;
+  .pro-desk {
+    display: block;
   }
- 
+
 }
