--- a/css/main.css
+++ b/css/main.css
@@ -162,12 +162,6 @@ table {
 .carousel {
   width: 100%; }
 
-.footer {
-  width: 100%;
-  height: 300px;
-  margin-top: 100px;
-  background-color: #000000; }
-
 .contact .visual {
   display: flex;
   flex-direction: column;
@@ -270,6 +264,16 @@ table {
           background-color: #003328;
           width: 100px;
           height: 40px; }
+    .contact .visual .con-cont .map-area {
+      width: 100%;
+      height: auto;
+      display: flex;
+      justify-content: center; }
+      .contact .visual .con-cont .map-area .map-layout {
+        width: 80%; }
+        .contact .visual .con-cont .map-area .map-layout iframe {
+          width: 100%;
+          height: 400px; }
 
 @media all and (min-width: 992px) {
   .contact .visual {
