--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,11 +1,6 @@
 // don't forget to leave comments while coding
 // and have fun!
-.footer {
-  width: 100%;
-  height: 300px;
-  margin-top: 100px;
-  background-color: #000000;
-}
+// contact form
 .contact {
   .visual {
     display: flex;
@@ -115,9 +110,7 @@
             }
           }
         }
-        // .comment {
-        //   background-color: black;
-        // }
+
         // submit
         .submit {
           height: 20%;
@@ -133,9 +126,31 @@
           }
         }
       }
+      .map-area {
+        width: 100%;
+        // background-color: #fff;
+        height: auto;
+        // margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        .map-layout {
+          width: 80%;
+          iframe {
+            width: 100%;
+            height: 400px;
+          }
+        }
+      }
+      // con-cont end below
     }
   }
 }
+// map .contact {
+//   .visual {
+//     .con-cont {
+//     }
+//   }
+// }
 // effect
 
 @media all and (min-width: 992px) {
