--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -141,6 +141,17 @@
           }
         }
       }
+      .info {
+        width: 100%;
+        height: calc(85% - 400px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // padding-top: 2rem;
+        span {
+          font-size: 2rem;
+        }
+      }
       // con-cont end below
     }
   }
