--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -152,6 +152,51 @@
           font-size: 2rem;
         }
       }
+      // contact 3 information
+      .info-space {
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        .intro,
+        .content {
+          display: flex;
+        }
+        .ways {
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: center;
+        }
+        .intro {
+          justify-content: center;
+          align-items: center;
+          // flex-grow: 1;
+          height: 100px;
+          background-color: yellow;
+          span {
+            font-size: 1.5rem;
+          }
+        }
+        .content {
+          height: 200px;
+          background-color: red;
+          .social {
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            .icon {
+              width: 80px;
+              height: 80px;
+              margin: 0 10px;
+              background-color: #fff;
+            }
+          }
+        }
+      }
+
       // con-cont end below
     }
   }
@@ -172,8 +217,7 @@
       flex-direction: row;
       .change,
       .con-cont {
-        flex-grow: 1;
-        // width: 40%;
+        width: 50%;
         height: 100%;
       }
     }
