--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,11 @@
 .card-text {
   color: white; }
 
-.cards .btn {
+.containercards .btn {
   display: flex;
   justify-items: center; }
 
-.cards .card {
+.containercards .card {
   margin: 0 auto; }
 
 .btn-primary {
@@ -52,13 +52,6 @@ button.btn.btn-link.collapsed {
   width: 100%;
   height: 100px; }
 
-.mobile-test {
-  background-color: red; }
-
-.desktop-test {
-  background-color: green;
-  display: none; }
-
 @media all and (min-width: 992px) {
   .mobile-test {
     display: none; }
@@ -66,6 +59,10 @@ button.btn.btn-link.collapsed {
     display: block; }
   .pro-desk {
     display: block; } }
+
+.cardgap {
+  background-color: #43b02a;
+  height: 50px; }
 
 .contain {
   margin: 0 auto;
