--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,7 @@
   margin: 0 auto;
   width: 90%;
   height: $section-height-mobile;
-  border: 1px solid black;
+  border: none;
   .divider {
     width: 100%;
     height: $nav-height-mobile;
